CMake: Improve ARM64 detection on Windows
Make sure that we check for the _M_ARM64 macro too when we check for ARM64
builds on Visual Studio, and look for arm64_neon.h on Visual Studio 2017,
so that we locate ARM64 build support on Visual Studio builds as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,13 @@ include(TestBigEndian)
 check_include_file("byteswap.h" HAVE_BYTESWAP_H)
 check_include_file("inttypes.h" HAVE_INTTYPES_H)
 check_include_file("stdint.h" HAVE_STDINT_H)
-check_include_file("arm_neon.h" FLAC__HAS_NEONINTRIN)
 
+# Sadly, we can't include arm_neon.h directly on Visual Studio 2017 for ARM64
+if(MSVC AND MSVC_TOOLSET_VERSION EQUAL 141)
+    check_include_file("arm64_neon.h" FLAC__HAS_NEONINTRIN)
+else()
+    check_include_file("arm_neon.h" FLAC__HAS_NEONINTRIN)
+endif()
 if(MSVC)
     check_include_file("intrin.h" FLAC__HAS_X86INTRIN)
 else()
